syntax = "proto3";

package v1.issuer;

option go_package = "vc/internal/gen/issuer/apiv1_issuer";

//import "google/protobuf/timestamp.proto";
//import "google/protobuf/any.proto";

service IssuerService {
    rpc MakeSDJWT (MakeSDJWTRequest) returns (MakeSDJWTReply) {}
}

message MakeSDJWTRequest {
    string AuthenticSource = 1;
    string AuthenticSourcePersonID = 2;
    string DocumentType = 3;
    string DocumentID = 4;
    string DocumentVersion = 5;
    string CollectID = 6;
    string DateOfBirth = 7;
    string LastName = 8;
    string FirstName = 9;
    string CredentialType = 10;
    bytes DocumentData = 11;
}

message MakeSDJWTReply {
    string JWT = 1;
    repeated string Disclosures = 2;
}
